--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -46,6 +46,21 @@ body {
   }
 }
 
+#cyberthreat {
+  img {
+    margin-top: -50px;
+  }
+
+  .card:hover {
+    background: $primary;
+    color: white;
+  }
+
+  .fab {
+    color: white;
+  }
+}
+
 // Media Queries
 
 @media (max-width: 768px) {
