added responsiveness to "Why hacking" section

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,14 @@ body {
   margin: auto;
   border-bottom: 1px #ddd solid; }
 
+#cyberthreat img {
+  margin-top: -50px; }
+#cyberthreat .card:hover {
+  background: #3292a6;
+  color: white; }
+#cyberthreat .fab {
+  color: white; }
+
 @media (max-width: 768px) {
   #showcase {
     min-height: 500px; }
@@ -38,7 +46,14 @@ body {
       font-size: 4rem; }
 
   .mb-resp {
-    margin-bottom: 1rem; } }
+    margin-bottom: 1rem; }
+
+  #about .container {
+    width: 100%;
+    margin: auto; 
+  }
+  #about h1 {
+    font-size: 3rem; } }
 @media (max-width: 480px) {
   #showcase {
     min-height: 500px; }
