--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 /* this font is for nav and hero-image words*/
 @import url("https://fonts.googleapis.com/css?family=Hammersmith+One");
 /* this font is for boxes*/
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
+/* this font is for logo */
 body {
   margin-top: 105px;
   line-height: 2;
@@ -9,9 +11,13 @@ body {
 
 .navbar {
   box-shadow: 2px 2px 5px #3292a6;
-  opacity: 0.9;
   background: #fff;
   font-family: "Patua One"; }
+  #logo {
+    font-family: 'Righteous', cursive;
+    text-transform: uppercase;
+    font-size:1.4rem;
+  }
   .navbar .nav-item {
     font-size: 1.3rem;
     padding-right: 1.4rem; }
@@ -36,8 +42,18 @@ body {
 #cyberthreat .card:hover {
   background: #3292a6;
   color: white; }
-#cyberthreat .fab {
-  color: white; }
+  #cyberthreat .fab {
+    color: #696969;}
+    #cyberthreat .card:hover i {
+      color:#fff;
+    }
+
+
+@media (max-width: 968px) {
+  #boxes {
+    margin:0;
+  }
+}
 
 @media (max-width: 768px) {
   #showcase {
