--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@ body {
   margin-top: 105px;
   line-height: 2;
   color: #222; }
+  p {
+    font-family: 'Raleway' !important;
+  }
 
 .navbar {
   box-shadow: 2px 2px 5px #3292a6;
